@@ -63,7 +63,7 @@ export(subsetByRareTaxa)
 export(subsetFeatures)
 export(subsetSamples)
 export(subsetTaxa)
-export(testForExperimentCrossCorrelation)
+export(testExperimentCrossCorrelation)
 export(transformCounts)
 export(transformFeatures)
 export(transformSamples)
@@ -132,7 +132,7 @@ exportMethods(summary)
 exportMethods(taxonomyRankEmpty)
 exportMethods(taxonomyRanks)
 exportMethods(taxonomyTree)
-exportMethods(testForExperimentCrossCorrelation)
+exportMethods(testExperimentCrossCorrelation)
 exportMethods(transformCounts)
 exportMethods(transformFeatures)
 exportMethods(transformSamples)
@@ -179,6 +179,7 @@ importFrom(IRanges,relist)
 importFrom(MASS,isoMDS)
 importFrom(MultiAssayExperiment,ExperimentList)
 importFrom(MultiAssayExperiment,MultiAssayExperiment)
+importFrom(MultiAssayExperiment,experiments)
 importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,DataFrame)
 importFrom(S4Vectors,SimpleList)
