@@ -16,3 +16,5 @@ Changes in version 1.1.x (2021-06-04)
 + added getExperimentCrossCorrelation for calculatting cross-correlation between features
 + added calculateOverlap
 + getUniqueTaxa & getTopTaxa: added option for alphabetical order
++ name change: testForExperimentCrossCorrelation to testExperimentCrossCorrelation
++ getExperimentCrossCorrelation: Filtering disabled by default, option to suppress warnings
